compiler/testData/diagnostics/tests/SafeCallUnknownType.fir.kt
import <!UNRESOLVED_IMPORT!>com<!>.unknown

fun ff() {
    konst a = <!UNRESOLVED_REFERENCE!>unknown<!>()
    konst b = a?.plus(42)
}
